# aws-profiles

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  pull_request.yml  test.yml
src/: aws_profile.py
tests/: test_aws_profile.py
tests/resources/: mock_config.ini
