[tool.poetry]
name = "aws-profiles"
version = "1.0.0"
description = "Simple Script to list all named profiles in ~/.aws/config"
authors = ["Brian Peterson <brian.peterson@cloudshift.cc>"]
packages = [ {include = "src"} ]
keywords = ["aws", "awscli", "aws-cli"]
license = "MIT"
repository = "https://github.com/cloudshiftstrategies/aws-profiles"

[tool.poetry.scripts]
aws_profile = 'src.aws_profile:main'
aws_profiles = 'src.aws_profile:main'

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
commitizen = "^2.23.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
